# sentinel-logs

./: .env  .env.example  .gitignore  package.json  pyproject.toml  tsconfig.sdk.json
sentinel-sdk/browser/: agent.ts
sentinel-sdk/node/: agent.ts  register.ts
sentinel-sdk/python/: agent.py  sitecustomize.py
